test/Fail/Issue373.err
Issue373.agda:10.1-48: error: [CustomBackendError]
GHC:
  Conflicting GHC pragmas for Nat at
    - Issue373.agda:7.1-28
    - Issue373.agda:10.1-48
